--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -529,3 +529,12 @@
 
 "kIGuessAction" = "Guess";
 "kOneMoreAction" = "One More";
+
+"kChatListTitle" = "Chat";
+"kAddChat" = "Create";
+"kSelectContacts" = "Select Contacts";
+
+
+
+
+
