--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -537,3 +537,12 @@
 
 "kIGuessAction" = "我来猜猜";
 "kOneMoreAction" = "再来一幅";
+
+"kChatListTitle" = "聊天";
+"kAddChat" = "创建";
+"kSelectContacts" = "选择联系人";
+
+
+
+
+
