--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -533,3 +533,11 @@
 
 "kIGuessAction" = "我來猜猜";
 "kOneMoreAction" = "再來一幅";
+
+"kChatListTitle" = "聊天";
+"kAddChat" = "創建";
+"kSelectContacts" = "選擇聯繫人";
+
+
+
+
