--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -534,6 +534,8 @@
 "kAddChat" = "Create";
 "kSelectContacts" = "Select Contacts";
 "kSendMessage" = "Send";
+"kSendingChatMessage" = "Sending...";
+"kSendMessageFailed" = "Failed to send";
 "kGraffiti" = "Graffiti";
 
 "kComment" = "Comment";
