--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -516,9 +516,9 @@
 "kHotFeed" = "Hot";
 "kMyFeed" = "My";
 
-"kDrawDesc" = "%@ drawed a drawing.";
-"kGuessRightDesc" = "%@ guessed %@'s drawing";
-"kTryGuessDesc" = "%@ tried to guess %@'s drawing";
+"kDrawDesc" = "drawed a drawing.";
+"kGuessRightDesc" = "Guessed %@'s drawing";
+"kTryGuessDesc" = "Tried to guess %@'s drawing";
 
 "kNoGuess" = "Guess 0";
 "kGuessStat" = "Guess %d, Correct %d";
@@ -548,3 +548,5 @@
 "kSending" = "Sending...";
 "kNoCommentTips" = "No Comments";
 "kFeedDetail" = "Feed Detail";
+
+"kCommentFail" = "Failed to Comment";
