--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -543,8 +543,8 @@
 "kIGuessAction" = "我来猜猜";
 "kOneMoreAction" = "再来一幅";
 "kIGuessCorrect" = "猜对了";
-"kChatListTitle" = "聊天";
-"kAddChat" = "创建";
+"kChatListTitle" = "涂鸦聊天";
+"kAddChat" = "新建";
 "kSelectContacts" = "选择联系人";
 "kSendMessage" = "发送";
 "kSendingChatMessage" = "发送中...";
