--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -522,12 +522,15 @@
 "kMyFeed" = "我的";
 
 "kDrawDescNoWord" = "畫了一幅畫";
-"kGuessRightDescNoWord" = "猜對%@的畫";
+"kGuessRightDescNoWord" = "猜對了%@的畫";
 "kTryGuessDescNoWord" = "嘗試去猜了%@的畫";
 
 "kDrawDesc" = "畫了一幅 [%@]";
-"kGuessRightDesc" = "猜對%@畫的 [%@]";
+"kGuessRightDesc" = "猜對了%@畫的 [%@]";
 "kTryGuessDesc" = "嘗試去猜了%@畫的 [%@]";
+
+"kNotificationGuessRightDesc" = "%@猜對了你畫的[%@]。你也去猜猜TA的畫？";
+"kNotificationTryGuessDesc" = "%@嘗試去猜了你畫的[%@]。你也去猜猜TA的畫？";
 
 "kNoGuess" = "猜0";
 "kGuessStat" = "猜%d 中%d";
