new beautiful home page

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -565,3 +565,8 @@
 "kBlankDrawMessage" = "You can't submit a blank drawing.";
 
 "kChat" = "Chat";
+"kFriend" = "Friend";
+"kGuessOnly" = "Guess";
+"kDrawOnly" = "Draw";
+"kFeed" = "Feed";
+"kFreeCoins" = "Free Coins";
