--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -572,3 +572,8 @@
 "kBlankDrawMessage" = "不能提交空白的画哦，至少得画几笔吧？";
 
 "kChat" = "聊天";
+"kFriend" = "好友";
+"kGuessOnly" = "我要猜";
+"kDrawOnly" = "我要画";
+"kFeed" = "好友动态";
+"kFreeCoins" = "免费金币";
