--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -540,9 +540,13 @@
 "kIGuessAction" = "Guess";
 "kOneMoreAction" = "One More";
 "kIGuessCorrect" = "Correct";
+
 "kChatListTitle" = "Graffiti chat";
+"kNoChatListInfo" = "No record";
+"kGraffitiMessage" = "Graffiti";
 "kAddChat" = "Create";
 "kSelectContacts" = "Select Contacts";
+"KNoFollowContacts" = "No follower yet";
 "kSendMessage" = "Send";
 "kSendingChatMessage" = "Sending...";
 "kSendMessageFailed" = "Failed to send";
