--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -545,11 +545,12 @@
 "kNoChatListInfo" = "No record";
 "kGraffitiMessage" = "Graffiti";
 "kAddChat" = "Create";
-"kSelectContacts" = "Select Contacts";
+"kSelectContacts" = "Select friend";
 "KNoFollowContacts" = "No follower yet";
 "kSendMessage" = "Send";
 "kSendingChatMessage" = "Sending...";
 "kSendMessageFailed" = "Failed to send";
+"kSendMessageSuccessfully" = "Send successfully";
 "kGraffiti" = "Graffiti";
 
 "kComment" = "Comment";
