--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -546,11 +546,12 @@
 "kNoChatListInfo" = "沒有記錄";
 "kGraffitiMessage" = "塗鴉信息";
 "kAddChat" = "新建";
-"kSelectContacts" = "選擇聯繫人";
+"kSelectContacts" = "選擇好友";
 "KNoFollowContacts" = "暫未有關注";
 "kSendMessage" = "發送";
 "kSendingChatMessage" = "發送中...";
 "kSendMessageFailed" = "發送失敗";
+"kSendMessageSuccessfully" = "發送成功";
 "kGraffiti" = "塗鴉";
 
 
