--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -562,7 +562,7 @@
 "kCorrect" = "Correct!";
 "kSending" = "Sending...";
 "kNoCommentTips" = "No Comments";
-"kFeedDetail" = "Feed Detail";
+"kFeedDetail" = "%@'s Drawing";
 
 "kCommentFail" = "Failed to Comment";
 
