--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -570,7 +570,7 @@
 "kCorrect" = "猜对了！";
 "kSending" = "发送中...";
 "kNoCommentTips" = "还没有人评论";
-"kFeedDetail" = "动态详情";
+"kFeedDetail" = "%@的画";
 
 "kCommentFail" = "评论失败";
 "kBlankDrawTitle" = "空白的画";
@@ -587,4 +587,4 @@
 
 "kMathOpusFail" = "不好意思，不能为你找到匹配的作品。";
 
-"kGuessWords" = "TA猜: %@";
+"kGuessWords" = "猜画的是: %@";
