--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -533,8 +533,8 @@
 "kGuessRightDesc" = "猜对了%@画的 [%@]。";
 "kTryGuessDesc" = "尝试去猜了%@画的 [%@]。";
 
-"kNotificationGuessRightDesc" = "%@猜对了你画的 [%@]。你也去猜猜TA的画？";
-"kNotificationTryGuessDesc" = "%@尝试去猜了你画的 [%@]。你也去猜猜TA的画？";
+"kNGRD" = "%@猜对了你画的 [%@]。你也去猜猜TA的画？";
+"kNTGD" = "%@尝试去猜了你画的 [%@]。你也去猜猜TA的画？";
 
 
 "kNoGuess" = "猜0";
