add push strings

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -590,3 +590,4 @@
 "kExploreHim" = "His(Her) feed";
 "kPlayWithHim" = "Play with him(her)";
 "kChatToHim" = "Talk something";
+"kFM" = "Someone has just followed you";
