--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -516,7 +516,7 @@
 "kHotFeed" = "Hot";
 "kMyFeed" = "My";
 
-
+"kMyFeedList" = "My Feed";
 
 "kDrawDesc" = "Drawed a drawing: [%@].";
 "kGuessRightDesc" = "Guessed %@'s drawing: [%@].";
@@ -590,3 +590,5 @@
 "kExploreHim" = "His(Her) feed";
 "kPlayWithHim" = "Play with him(her)";
 "kChatToHim" = "Talk something";
+
+"kUserFeedTitle" = "%@'s Feed";
