--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -590,3 +590,12 @@
 "kExploreHim" = "His(Her) feed";
 "kPlayWithHim" = "Play with him(her)";
 "kChatToHim" = "Talk something";
+
+"kSetEmail" = "Email";
+"kEmailNotSet" = "";
+"kSetSinaWeibo" = "新浪微博";
+"kWeiboSet" = "Connected";
+"kNotSet" = "Not Connected";
+"kSetQQWeibo" = "腾讯微博";
+"kSetFacebook" = "Facebook";
+"kInputEmail" = "Enter Email Address";
