add user SNS connect support

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -603,3 +603,5 @@
 "kSetQQWeibo" = "腾讯微博";
 "kSetFacebook" = "Facebook";
 "kInputEmail" = "Enter Email Address";
+"kUserBindSucc" = "Update user successfully.";
+"kUserBindFail" = "Fail to update user information. Please try later.";
