--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -606,3 +606,4 @@
 "kInputEmail" = "請輸入電子郵件地址";
 "kUserBindSucc" = "成功綁定了用​​戶帳號";
 "kUserBindFail" = "綁定用戶帳號失敗，請檢查網絡是否可用，稍候再試，或者聯繫我們的技術支持";
+"kWeiboExpired" = "微博授權已過期";
