--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -607,3 +607,10 @@
 "kUserBindSucc" = "成功綁定了用​​戶帳號";
 "kUserBindFail" = "綁定用戶帳號失敗，請檢查網絡是否可用，稍候再試，或者聯繫我們的技術支持";
 "kWeiboExpired" = "微博授權已過期";
+
+"kPDUM" = "%@給你畫了一幅畫，趕緊去猜猜TA畫了些什麼。";
+
+"kDrawToUserDesc" = "畫了一幅[%@]給%@。";
+"kDrawToUserNoWordDesc" = "畫了一幅畫給%@。";
+
+"kHisFriend" = "TA好友";
