--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -611,3 +611,10 @@
 "kUserBindSucc" = "成功绑定了用户帐号";
 "kUserBindFail" = "绑定用户帐号失败，请检查网络是否可用，稍候再试，或者联系我们的技术支持";
 "kWeiboExpired" = "微博授权已过期";
+
+"kPDUM" = "%@给你画了一幅画，赶紧去猜猜TA画了些什么。";
+
+"kDrawToUserDesc" = "画了一幅[%@]给%@。";
+"kDrawToUserNoWordDesc" = "画了一幅画给%@。";
+
+"kHisFriend" = "TA好友";
