--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -611,7 +611,7 @@
 "kUserBindSucc" = "成功绑定了用户帐号";
 "kUserBindFail" = "绑定用户帐号失败，请检查网络是否可用，稍候再试，或者联系我们的技术支持";
 "kWeiboExpired" = "微博授权已过期";
-"kSaveAndShare" = "保存&分享";
+"kSaveAndShare" = "保存并分享";
 
 "kRebindQQ" = "你已经绑定过腾讯微博了，是否要重新尝试绑定？";
 "kRebindSina" = "你已经绑定了新浪微博了，是否要重新尝试绑定？";
