add "remove ad" support

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -621,3 +621,4 @@
 "kRebindSina" = "你已经绑定了新浪微博了，是否要重新尝试绑定？";
 "kRebindFacebook" = "You have connected to Facebook. Do you want to connect again?";
 
+"kRemoveAd" = "Remove Ad";
