--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -622,3 +622,7 @@
 "kRebindFacebook" = "You have connected to Facebook. Do you want to connect again?";
 
 "kRemoveAd" = "Remove Ad";
+"kRemoveAdByIAP" = "You just need to buy 400 coins to remove Ad";
+"kMessage" = "Message";
+"kAdRemoved" = "Removed";
+"kAdNotRemoved" = "Not Removed";
