--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -619,3 +619,7 @@
 "kHisFriend" = "TA好友";
 
 "kRemoveAd" = "移除廣告";
+"kRemoveAdByIAP" = "你只需要購買400個金幣即可直接移除廣告，確認嗎？";
+"kMessage" = "消息";
+"kAdRemoved" = "已移除";
+"kAdNotRemoved" = "待移除";
