--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -586,8 +586,8 @@
 "kGuessWords" = "Guessing: %@";
 "kMyDrawing" = "My Drawing:[%@]";
 
-"kDrawToHim" = "Draw him(her) a picture";
-"kExploreHim" = "His(Her) feed";
+"kDrawToHim" = "Draw something";
+"kExploreHim" = "Feed";
 "kPlayWithHim" = "Play with him(her)";
 "kChatToHim" = "Talk something";
 
