--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -243,6 +243,9 @@
 
 "kCreating_gif" = "正在生成GIF動畫文件中... 文件可能比較大，請耐心等待";
 
+"kShareOtherTextAuto" = "我在玩%@，對手真油菜花！TA畫的是［%@］，沒想到吧~！我也木有想到！果斷圍觀啊！%@ #猜猜畫畫美圖分享# http://itunes.apple.com/cn/app/cai-cai-hua-hua/id513819630?mt=8";
+
+"kShareMeTextAuto" = "我在玩%@，快來圍觀我畫了什麼吧！畫的詞是［%@］，看來我畫工還不錯！#猜猜畫畫美圖分享# http://itunes .apple.com/cn/app/cai-cai-hua-hua/id513819630?mt=8";
 
 "kShareOtherText" = "我在玩@猜猜畫畫手機版，對手真油菜花！TA畫的是［%@］，沒想到吧~！我也木有想到！果斷圍觀啊！#猜猜畫畫美圖分享# http://caicaihuahua.me";
 "kShareMeText" = "我在玩@猜猜畫畫手機版，快來圍觀我畫了什麼吧！畫的詞是［%@］，看來我畫工還不錯！#猜猜畫畫美圖分享# http://caicaihuahua.me";
