update notification show.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -636,3 +636,9 @@
 "kChallenge" = "Challenge";
 "kDeleting" = "Deleting...";
 "kDeleteFail" = "Fail to delete.";
+
+
+"kFanStatus" = "Fans(%d)";
+"kFeedStatus" = "Feed(%d)";
+"kRoomStatus" = "Room(%d)";
+"kMessageStatus" = "Message(%d)";
