--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -643,3 +643,8 @@
 
 "kDeleting" = "删除中...";
 "kDeleteFail" = "删除失败！";
+
+"kFanStatus" = "新粉丝(%d)";
+"kFeedStatus" = "新动态(%d)";
+"kRoomStatus" = "新房间邀请(%d)";
+"kMessageStatus" = "新消息(%d)";
